--- a/captest/values.yaml
+++ b/captest/values.yaml
@@ -1,4 +1,5 @@
 appVersion: "latest-v2"
+
 images:
   - name: api-gateway
     image: prashanth7993/captest-api-gateway:1.2.1
@@ -7,7 +8,6 @@ images:
   - name: authentication-service
     image: prashanth7993/captest-authentication-service:1.2.1
     port: 9089
-    database: authentication_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/authentication_db
@@ -19,7 +19,6 @@ images:
   - name: bus-service
     image: prashanth7993/captest-bus-service:1.2.1
     port: 9095
-    database: bus_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/bus_db
@@ -31,7 +30,6 @@ images:
   - name: carpool-service
     image: prashanth7993/captest-carpool-service:1.2.1
     port: 9096
-    database: carpool_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/carpool_db
@@ -43,7 +41,6 @@ images:
   - name: feedback-service
     image: prashanth7993/captest-feedback-service:1.2.1
     port: 9099
-    database: feedback_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/feedback_db
@@ -55,7 +52,6 @@ images:
   - name: notification-service
     image: prashanth7993/captest-notification-service:1.2.1
     port: 9092
-    database: notification_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/notification_db
@@ -67,7 +63,6 @@ images:
   - name: payment-service
     image: prashanth7993/captest-payment-service:1.2.1
     port: 9696
-    database: payment_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/payment_db
@@ -79,7 +74,6 @@ images:
   - name: route-service
     image: prashanth7993/captest-route-service:1.2.1
     port: 9097
-    database: route_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/route_db
@@ -95,7 +89,6 @@ images:
   - name: user-service
     image: prashanth7993/captest-user-service:1.2.1
     port: 9098
-    database: user_db
     env:
       - name: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:5432/user_db
@@ -113,4 +106,209 @@ initdbScript: |
   CREATE DATABASE payment_db;
   CREATE DATABASE route_db;
   CREATE DATABASE user_db;
+
+ingress:
+  enabled: true
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  hosts:
+    - host: example.com
+      paths:
+        - path: /auth(/|$)(.*)
+          serviceName: authentication-service
+          servicePort: 9089
+        - path: /buses(/|$)(.*)
+          serviceName: bus-service
+          servicePort: 9095
+        - path: /busSchedules(/|$)(.*)
+          serviceName: bus-service
+          servicePort: 9095
+        - path: /routes(/|$)(.*)
+          serviceName: route-service
+          servicePort: 9097
+        - path: /carpools(/|$)(.*)
+          serviceName: carpool-service
+          servicePort: 9096
+        - path: /feedback(/|$)(.*)
+          serviceName: feedback-service
+          servicePort: 9099
+        - path: /notifications(/|$)(.*)
+          serviceName: notification-service
+          servicePort: 9092
+        - path: /payment(/|$)(.*)
+          serviceName: payment-service
+          servicePort: 9696
+        - path: /stops(/|$)(.*)
+          serviceName: route-service
+          servicePort: 9097
+        - path: /tickets(/|$)(.*)
+          serviceName: ticket-service
+          servicePort: 8080
+        - path: /users(/|$)(.*)
+          serviceName: user-service
+          servicePort: 9098
+        - path: /realtime(/|$)(.*)
+          serviceName: bus-service
+          servicePort: 9095
+
+
+# appVersion: "latest-v2"
+# images:
+#   - name: api-gateway
+#     image: prashanth7993/captest-api-gateway:1.2.1
+#     port: 9000
+
+#   - name: authentication-service
+#     image: prashanth7993/captest-authentication-service:1.2.1
+#     port: 9089
+#     database: authentication_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/authentication_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: bus-service
+#     image: prashanth7993/captest-bus-service:1.2.1
+#     port: 9095
+#     database: bus_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/bus_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: carpool-service
+#     image: prashanth7993/captest-carpool-service:1.2.1
+#     port: 9096
+#     database: carpool_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/carpool_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: feedback-service
+#     image: prashanth7993/captest-feedback-service:1.2.1
+#     port: 9099
+#     database: feedback_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/feedback_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: notification-service
+#     image: prashanth7993/captest-notification-service:1.2.1
+#     port: 9092
+#     database: notification_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/notification_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: payment-service
+#     image: prashanth7993/captest-payment-service:1.2.1
+#     port: 9696
+#     database: payment_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/payment_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: route-service
+#     image: prashanth7993/captest-route-service:1.2.1
+#     port: 9097
+#     database: route_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/route_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+#   - name: service-registry
+#     image: prashanth7993/captest-service-registry:1.2.1
+#     port: 8761
+
+#   - name: user-service
+#     image: prashanth7993/captest-user-service:1.2.1
+#     port: 9098
+#     database: user_db
+#     env:
+#       - name: SPRING_DATASOURCE_URL
+#         value: jdbc:postgresql://postgres:5432/user_db
+#       - name: SPRING_DATASOURCE_USERNAME
+#         value: myuser
+#       - name: SPRING_DATASOURCE_PASSWORD
+#         value: mypassword
+
+# initdbScript: |
+#   CREATE DATABASE authentication_db;
+#   CREATE DATABASE bus_db;
+#   CREATE DATABASE carpool_db;
+#   CREATE DATABASE feedback_db;
+#   CREATE DATABASE notification_db;
+#   CREATE DATABASE payment_db;
+#   CREATE DATABASE route_db;
+#   CREATE DATABASE user_db;
+
+# ingress:
+#   enabled: true
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /$2
+#   hosts:
+#     - host: example.com
+#       paths:
+#         - path: /auth(/|$)(.*)
+#           serviceName: auth-service
+#           servicePort: 9089
+#         - path: /buses(/|$)(.*)
+#           serviceName: bus-service
+#           servicePort: 9095
+#         - path: /busSchedules(/|$)(.*)
+#           serviceName: bus-schedule-service
+#           servicePort: 9095
+#         - path: /routes(/|$)(.*)
+#           serviceName: route-service
+#           servicePort: 9097
+#         - path: /carpools(/|$)(.*)
+#           serviceName: carpool-service
+#           servicePort: 9096
+#         - path: /feedback(/|$)(.*)
+#           serviceName: feedback-service
+#           servicePort: 9099
+#         - path: /notifications(/|$)(.*)
+#           serviceName: notification-service
+#           servicePort: 9092
+#         - path: /payment(/|$)(.*)
+#           serviceName: payment-service
+#           servicePort: 9696
+#         - path: /stops(/|$)(.*)
+#           serviceName: stop-service
+#           servicePort: 9097
+#         - path: /tickets(/|$)(.*)
+#           serviceName: ticket-service
+#           servicePort: 8080
+#         - path: /users(/|$)(.*)
+#           serviceName: user-service
+#           servicePort: 9098
+#         - path: /realtime(/|$)(.*)
+#           serviceName: realtime-data-service
+#           servicePort: 9095
 
