--- a/BackendDeployAksPipeline.yaml
+++ b/BackendDeployAksPipeline.yaml
@@ -1,71 +1,36 @@
-trigger: none
+trigger:
+  branches:
+    include:
+      - main
 
-variables:
-  azureSubscription: 'prashanthscn'
-  aksClusterName1: 'aks-cluster-vnet1'
-  aksClusterName2: 'aks-cluster-vnet2'
-  aksResourceGroup: 'my-rg'
-  helmChartName: 'backend-chart'
-  helmChartRepo: 'oci://mysharedacr1234.azurecr.io/helm'
-  helmChartVersion: '1.0.0'
-  helmReleaseName: 'backend-app'
-  helmNamespace: 'backend'
+pool:
+  name: Default
 
-stages:
-  - stage: HelmDeployAks1
-    displayName: Deploy Helm Chart to AKS Cluster 1
-    jobs:
-      - job: DeployAks1
-        displayName: Deploy to AKS 1
-        pool:
-          name: Default
-        steps:
-          - task: AzureCLI@2
-            displayName: 'Deploy to AKS 1 via Bicep'
-            inputs:
-              azureSubscription: $(azureSubscription)
-              scriptType: bash
-              scriptLocation: inlineScript
-              inlineScript: |
-                echo "Deploying Helm chart to AKS Cluster 1..."
-                az deployment sub create \
-                  --location centralindia \
-                  --template-file BackendDeploy.bicep \
-                  --parameters \
-                    aksName="$(aksClusterName1)" \
-                    aksResourceGroup="$(aksResourceGroup)" \
-                    releaseName="$(helmReleaseName)" \
-                    chartName="$(helmChartName)" \
-                    chartVersion="$(helmChartVersion)" \
-                    chartRepo="$(helmChartRepo)" \
-                    namespace="$(helmNamespace)" \
-                  --output none # <--- ADD THIS LINE
-
-  - stage: HelmDeployAks2
-    displayName: Deploy Helm Chart to AKS Cluster 2
-    jobs:
-      - job: DeployAks2
-        displayName: Deploy to AKS 2
-        pool:
-          name: Default
-        steps:
-          - task: AzureCLI@2
-            displayName: 'Deploy to AKS 2 via Bicep'
-            inputs:
-              azureSubscription: $(azureSubscription)
-              scriptType: bash
-              scriptLocation: inlineScript
-              inlineScript: |
-                echo "Deploying Helm chart to AKS Cluster 2..."
-                az deployment sub create \
-                  --location eastus \
-                  --template-file BackendDeploy.bicep \
-                  --parameters \
-                    aksName="$(aksClusterName1)" \
-                    aksResourceGroup="$(aksResourceGroup)" \
-                    releaseName="$(helmReleaseName)" \
-                    chartName="$(helmChartName)" \
-                    chartVersion="$(helmChartVersion)" \
-                    chartRepo="$(helmChartRepo)" \
-                    namespace="$(helmNamespace)" \
-                  --output none # <--- ADD THIS LINE
+steps:
+  - task: AzureCLI@2
+    displayName: 'Deploy Helm Chart via Bicep'
+    inputs:
+      azureSubscription: 'azure-service-connection'
+      scriptType: 'bash'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
+        az deployment group create \
+          --resource-group $(resourceGroupName) \
+          --template-file ./bicep/main.bicep \
+          --parameters \
+              cluster1Name=$(cluster1Name) \
+              cluster2Name=$(cluster2Name) \
+              helmChartName=$(helmChartName) \
+              helmChartVersion=$(helmChartVersion) \
+              helmRepoUrl=$(helmRepoUrl) \
+              namespace=$(namespace) \
+              releaseName=$(releaseName)
+    env:
+      resourceGroupName: '$(resourceGroupName)'
+      cluster1Name: 'aks-cluster1'
+      cluster2Name: 'aks-cluster2'
+      helmChartName: 'backend'
+      helmChartVersion: '4.11.1'
+      helmRepoUrl: 'oci://mysharedacr1234.azurecr.io/hel'
+      namespace: 'default'
+      releaseName: 'my-backend-release'
